force-app/main/default/objects/Doc_Charge__mdt/Doc_Charge__mdt.object-meta.xml
<CustomObject>
    <label>Doc Charge</label>
    <pluralLabel>Doc Charges</pluralLabel>
</CustomObject>