force-app/main/default/objects/Doc_Charge__mdt/fields/Call_Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Call_Payment_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Payment Link</label>
    <type>Checkbox</type>
</CustomField>