force-app/main/default/objects/Doc_Charge__mdt/fields/Charge_Code__c.field-meta.xml
<CustomField>
    <fullName>Charge_Code__c</fullName>
    <label>Charge Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>