force-app/main/default/objects/Doc_Charge__mdt/fields/Charges__c.field-meta.xml
<CustomField>
    <fullName>Charges__c</fullName>
    <label>Charges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>