force-app/main/default/objects/Doc_Charge__mdt/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <defaultValue>18</defaultValue>
    <label>GST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>