force-app/main/default/objects/Doc_Charge__mdt/fields/Payment_Required__c.field-meta.xml
<CustomField>
    <fullName>Payment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Required ?</label>
    <type>Checkbox</type>
</CustomField>