force-app/main/default/objects/Doc_Charge__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Charges__c</columns>
    <columns>Amount__c</columns>
    <columns>Charge_Code__c</columns>
    <columns>CCC_External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>